# STARR-SURVEYING

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  IMPLEMENTATION_PROMPTS.md  IMPROVEMENT_ROADMAP.md  PLAN.md  PLAN_AI_PROPERTY_RESEARCH_DRAWING_RENDERER.md  README.md  STARR_CAD_IMPLEMENTATION.md  STARR_CAD_PHASE_1_ENGINE_CORE.md  STARR_CAD_PHASE_2_DATA_IMPORT.md  STARR_CAD_PHASE_3_STYLES_SYMBOLS.md  STARR_CAD_PHASE_4_GEOMETRY_TOOLS.md  STARR_CAD_PHASE_5_ANNOTATIONS_PRINT.md  STARR_CAD_PHASE_6_AI_ENGINE.md  STARR_CAD_PHASE_7_FINAL.md  STARR_CAD_PHASE_ROADMAP.md  STYLE_GUIDE.md  TESTING-PLAN.md  middleware.ts  next.config.js  package-lock.json  package.json  plan.md  playwright.config.ts  playwright.harness.config.ts  supabase_migration_articles.sql  supabase_migration_assignments_notifications.sql  supabase_migration_block_templates.sql  supabase_migration_cash_price.sql  supabase_migration_content_migrated.sql  supabase_migration_curriculum_v1.sql  supabase_migration_error_reports.sql  supabase_migration_fs_prep_v1.sql  supabase_migration_learning_credits_payouts.sql  supabase_migration_lesson_blocks_v2.sql  supabase_migration_lesson_description.sql  supabase_migration_problem_templates.sql  supabase_migration_question_types.sql  (+46 more)
.claude/: settings.json
STARR_RECON/: PHASE_01_DISCOVERY.md  PHASE_02_DOCUMENT_HARVEST.md  PHASE_03_EXTRACTION.md  PHASE_04_SUBDIVISION.md  PHASE_05_ADJACENT.md  PHASE_06_TXDOT.md  PHASE_07_GEOMETRIC_RECONCILIATION.md  PHASE_08_CONFIDENCE_SCORING.md  PHASE_10_REPORTS.md  (+7 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs  menu.rs
(+4828 files in other folders)
